[gd_scene format=3 uid="uid://tt6yn7v7ra60"]

[ext_resource type="Script" uid="uid://6xautbwr37w8" path="res://src/SideGuards/path_following_side_guards.gd" id="1_0n6er"]
[ext_resource type="PackedScene" uid="uid://vrqch763taww" path="res://src/SideGuards/SideGuardEndL.tscn" id="3_p8wci"]
[ext_resource type="PackedScene" uid="uid://dklutu2avwg7t" path="res://src/SideGuards/SideGuardEndR.tscn" id="4_kb53q"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_urw1l"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_0n6er"]

[node name="PathFollowingSideGuards" type="Node3D" unique_id=1360240366]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.246, 0)
script = ExtResource("1_0n6er")
size = Vector3(4.048, 4, 1)

[node name="OuterSideGuard" type="MeshInstance3D" parent="." unique_id=1363640870]

[node name="StaticBody3D" type="StaticBody3D" parent="OuterSideGuard" unique_id=810635629]

[node name="CollisionShape3D" type="CollisionShape3D" parent="OuterSideGuard/StaticBody3D" unique_id=1480171713]
shape = SubResource("ConcavePolygonShape3D_urw1l")

[node name="InnerSideGuard" type="MeshInstance3D" parent="." unique_id=140072262]

[node name="StaticBody3D" type="StaticBody3D" parent="InnerSideGuard" unique_id=906716561]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InnerSideGuard/StaticBody3D" unique_id=296878988]
shape = SubResource("ConcavePolygonShape3D_0n6er")

[node name="InnerSideGuardEnd" parent="." unique_id=1932088159 instance=ExtResource("3_p8wci")]
transform = Transform3D(1.07, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, -0.004, 2.006)

[node name="OuterSideGuardEnd" parent="." unique_id=706174861 instance=ExtResource("4_kb53q")]
transform = Transform3D(-1.07, 0, 1.509958e-07, 0, 1, 0, -1.6156552e-07, 0, -1, 0.25, -0.004, 1.009)

[node name="InnerSideGuardEnd2" parent="." unique_id=1349919913 instance=ExtResource("4_kb53q")]
transform = Transform3D(-4.6771188e-08, 0, -1, 0, 1, 0, 1.07, 0, -4.371139e-08, -2.006, -0.004, -0.25)

[node name="OuterSideGuardEnd2" parent="." unique_id=779610078 instance=ExtResource("3_p8wci")]
transform = Transform3D(-4.6771188e-08, 0, 1, 0, 1, 0, -1.07, 0, -4.371139e-08, -1.009, -0.004, -0.25)
